force-app/main/default/objects/Patient_Records__c/Patient_Records__c.object-meta.xml
<CustomObject>
    <label>Patient Record</label>
    <nameField>
        <displayFormat>REC-{000000000}</displayFormat>
        <label>Patient Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patient Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>