force-app/main/default/objects/Patient_Records__c/fields/Body_Part__c.field-meta.xml
<CustomField>
    <fullName>Body_Part__c</fullName>
    <label>Body Part</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Arm - L</fullName>
            </value>
            <value>
                <fullName>Arm - R</fullName>
            </value>
            <value>
                <fullName>Back - Lower</fullName>
            </value>
            <value>
                <fullName>Back - Middle</fullName>
            </value>
            <value>
                <fullName>Foot/Ankle - L</fullName>
            </value>
            <value>
                <fullName>Foot/Ankle - R</fullName>
            </value>
            <value>
                <fullName>Hand - L</fullName>
            </value>
            <value>
                <fullName>Hand - R</fullName>
            </value>
            <value>
                <fullName>Head</fullName>
            </value>
            <value>
                <fullName>Hip - L</fullName>
            </value>
            <value>
                <fullName>Hip - R</fullName>
            </value>
            <value>
                <fullName>Knee - L</fullName>
            </value>
            <value>
                <fullName>Knee - R</fullName>
            </value>
            <value>
                <fullName>Leg - L</fullName>
            </value>
            <value>
                <fullName>Leg - R</fullName>
            </value>
            <value>
                <fullName>Neck</fullName>
            </value>
            <value>
                <fullName>Shoulder - L</fullName>
            </value>
            <value>
                <fullName>Shoulder - R</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>