force-app/main/default/objects/Patient_Records__c/fields/Potential_Patient__c.field-meta.xml
<CustomField>
    <fullName>Potential_Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Potential Patient</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>Patient_MRI_Records</relationshipName>
    <type>Lookup</type>
</CustomField>