force-app/main/default/objects/Patient_Records__c/fields/Practice_Facility__c.field-meta.xml
<CustomField>
    <fullName>Practice_Facility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Practice/Facility</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Patient Records (Practice/Facility)</relationshipLabel>
    <relationshipName>Patient_Records</relationshipName>
    <type>Lookup</type>
</CustomField>