force-app/main/default/objects/Patient_Records__c/fields/Record_TYpe__c.field-meta.xml
<CustomField>
    <fullName>Record_TYpe__c</fullName>
    <label>Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>X-Ray</fullName>
            </value>
            <value>
                <fullName>MRI</fullName>
            </value>
            <value>
                <fullName>CT Scan</fullName>
            </value>
            <value>
                <fullName>Ultrasound</fullName>
            </value>
            <value>
                <fullName>Injection</fullName>
            </value>
            <value>
                <fullName>Surgery</fullName>
            </value>
            <value>
                <fullName>Office/Visit Notes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>